Update 'About' section in index.html
Added that I build nodes for ServingBitcoin.com.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="about">
             <aside>
                 <h2>About</h2>
-                <p>A seasoned node runner, <b>Relatively Irrlevant</b> began his first node in 2021. He builds and runs routing nodes to give back to the Bitcoin Lightning Network. Despite having built more than 40 nodes, he's only an <i>Assistant to the Regional Manager</i>.</p>
+                <p>A seasoned node runner, <b>Relatively Irrlevant</b> began running his first node in 2021. Today, he builds and runs refurbished Bitcoin nodes for <a href="https://servingbitcoin.com/">Serving Bitcoin</a> to give back to the Bitcoin network.</p>
             </aside>	
 
 		
